[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/world/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/square.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/circle.png" type="Texture" id=3]
[ext_resource path="res://source/SoundEffects.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[node name="Player" type="KinematicBody2D" groups=[
"Players",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
speed = 300.0

[node name="Shape" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Gun" type="Sprite" parent="." index="1"]

visible = false
modulate = Color( 0.167969, 0.161407, 0.161407, 1 )
position = Vector2( 32.5, 0 )
scale = Vector2( 0.25, 0.1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="2"]

modulate = Color( 0.988281, 0.910438, 0.644699, 1 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="GunCooldownTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.75
one_shot = true
autostart = false

[node name="SoundEffects" parent="." index="4" instance=ExtResource( 4 )]

[connection signal="gun_empty" from="." to="SoundEffects" method="play_empty_gun"]

[connection signal="picked_up_bullet" from="." to="SoundEffects" method="play_ammo_pickup"]

[connection signal="shot_bullet" from="." to="SoundEffects" method="play_gunshot"]


